--- a/nats-cli.cabal
+++ b/nats-cli.cabal
@@ -25,4 +25,16 @@ executable pub
                      , string-conversions
   hs-source-dirs:      src
   default-language:    Haskell2010
-  ghc-options:         -Wall
+  ghc-options:         -Wall -O2
+
+executable sub
+  main-is:             Sub.hs
+  -- other-modules:       
+  -- other-extensions:    
+  build-depends:       base >=4.9 && <4.10
+                     , hats
+                     , optparse-applicative
+                     , string-conversions
+  hs-source-dirs:      src
+  default-language:    Haskell2010
+  ghc-options:         -Wall -O2
