--- a/nats-cli.cabal
+++ b/nats-cli.cabal
@@ -38,3 +38,15 @@ executable sub
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall -O2
+
+executable request
+  main-is:             Request.hs
+  -- other-modules:       
+  -- other-extensions:    
+  build-depends:       base >=4.9 && <4.10
+                     , hats
+                     , optparse-applicative
+                     , string-conversions
+  hs-source-dirs:      src
+  default-language:    Haskell2010
+  ghc-options:         -Wall -O2
